codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Implement this plan?

› 1. Yes, implement this plan         Switch to Default and start coding.
  2. Refine plan (stay in Plan mode)  Continue planning with the model.
  3. Exit Plan mode                   Switch to Default mode without
                                      implementing yet.

  Press enter to confirm or esc to go back
