codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_hooks_empty_output.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
/hooks

🪝  Hooks

  • No hooks configured.
  • Add `notify`/`notify_on_*` keys in config.toml.
